# curobo_doosan

./: CMakeLists.txt  MPC_HL.py  README.md  build_docker.sh  config.yml  curobo_velocities.py  ddd  doosan_interface_moveit.launch  essai.py  humble_container.dockerfile  interactive_marker.py  isaac_sim.dockerfile  joint_velocity_publisher.py  launch_robot.sh  measure_latency.cpp  motion_camera.py  motion_gen_reacher_HL.py  mqtt_pub.py  mqtt_sub.py  noetic.dockerfile  ros_pub.py  start_docker.sh  start_docker_x86.sh  string_to_float64_multiarray.cpp  velocity_pub.py  x86.dockerfile
install/: local_setup.sh  setup.sh
install/a0509_moveit_config/share/a0509_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/a0912_moveit_config/share/a0912_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros_packages/trajectory_publisher/: package.xml  setup.py
ros_packages/trajectory_publisher/launch/: launch_rviz2.launch.py
ros_packages/trajectory_publisher/srdf/: m1013.srdf
ros_packages/trajectory_publisher/trajectory_publisher/: trajectory_pub.py
ros_packages/trajectory_publisher/urdf/: m1013.urdf
script_python/: MPC_HL.py  motion_camera.py  motion_gen_reacher_HL.py  motion_gen_roslibpy.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/m1013/: m1013.urdf  m1013.yml
velocity_pub/: package.xml  setup.py
velocity_pub/velocity_pub/: mgr_velocity_pub.py  mpc_velocity_pub.py
(+217 files in other folders)
